# icsor-arch

./: .gitignore  README.md  comparison.ipynb  main.ipynb  pyproject.toml  simulation.ipynb
article/: manuscript.tex  submission_guideline.md  supplementary_material.tex
article/results_citation/: results_discussion_citation_needs.md
article/wip/: cover_letter.tex  figure_style_guide.md  manuscript.reference-audit.json  manuscript.tex  nomenclature.csv  source_component_nonnegativity_violations_id.csv  source_component_projection_effects_id.csv  source_inference_latency.csv  source_learning_curves.csv  source_projection_change.csv  source_table_s_id_composite_accuracy.csv  source_violation_rates_by_sample_size.csv  submission_guideline.md  supplementary_material.tex  table_data_protocol.csv  table_dataset_validation.csv  table_evaluation_metrics.csv  table_full_size_accuracy.csv  table_invariant_matrix_dissolved.csv  table_invariant_matrix_particulate.csv  table_model_hyperparameters.csv  table_modeling_workflow.csv  table_ood_accuracy.csv  table_ood_domain.csv  table_optuna_design.csv  table_projection_physics.csv  table_s_backtracking.csv  table_s_full_hyperparameters.csv  table_s_id_component_accuracy.csv  table_s_id_composite_accuracy.csv  table_s_ood_mild_component_accuracy.csv  table_s_ood_mild_composite_accuracy.csv  (+7 more)
config/: params.json  paths.json
scripts/: build_additional_partial_insights.py  build_component_nonnegativity_heatmap.py  build_final_paper_assets.py  build_manuscript_revision_assets.py  build_partial_results_snapshot.py  load_surrogate_bundle.py  migrate_article_final_v2_mlp_protocol.py  migrate_article_final_v2_svr_protocol.py  migrate_article_final_v2_tabnet_protocol.py
(+37 files in other folders)
