[project]
name = "icsor-model"
version = "0.1.0"
description = "Simulation-driven and ML-oriented modeling workspace for icsor-model."
requires-python = ">=3.11,<3.13"
dependencies = [
    "catboost>=1.2.8",
    "matplotlib>=3.10.8",
    "lightgbm>=4.6.0",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "osqp>=1.0.4",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.1",
    "torch==2.4.1",
    "xgboost>=3.2.0",
    "ipykernel>=7.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true  # Ensures this index is only used when specified

[tool.uv.sources]
torch = { index = "pytorch-cu124" }


