[project]
name = "icsor-model"
version = "0.1.0"
description = "Single-notebook reproducible benchmark for the ASM2d-TSN surrogate study."
requires-python = ">=3.12,<3.13"
dependencies = [
    "catboost>=1.2.8",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tabicl==2.1.1",
    "threadpoolctl>=3.6.0",
    "tqdm>=4.67.1",
    "torch==2.4.1",
    "xgboost>=3.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true  # Ensures this index is only used when specified

[tool.uv.sources]
torch = { index = "pytorch-cu124" }


